--- a/AndroidAgrov.2/app/src/main/AndroidManifest.xml
+++ b/AndroidAgrov.2/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Iniciar_SesionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegistrarActivity"
+            android:exported="false" />
+        <activity
             android:name=".edit_Product_Activity"
             android:exported="false" />
         <activity
